# notes-about-cmake

./: .gitignore  README.md
simple-libraray-creation/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
sub-dir-library-creation/: CMakeLists.txt
sub-dir-library-creation/main/: CMakeLists.txt  main.cpp
sub-dir-library-creation/math/: CMakeLists.txt
sub-dir-library-creation/math/src/add/: add.cpp  add.hpp
